--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ JWT_REFRESH_TOKEN_EXPIRY=168h
 # Application
 APP_ENV=development
 LOG_LEVEL=debug
+
+# CORS
+# Comma-separated list of allowed origins, e.g.:
+# CORS_ALLOWED_ORIGINS=http://localhost:3000,https://app.example.com
+CORS_ALLOWED_ORIGINS=
