--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,15 @@ jobs:
       - name: Run unit tests
         run: go test ./...
 
+      - name: Install Spectral
+        run: npm install -g @stoplight/spectral-cli
+
+      - name: Lint OpenAPI spec
+        run: spectral lint docs/openapi.yaml
+
+      - name: Ensure OpenAPI spec committed
+        run: git diff --exit-code docs/openapi.yaml
+
       - name: Apply database migrations
         run: go run cmd/migrate/main.go -command up
 
