ci: Include OpenAPI spec in deployment artifacts
This commit adds the OpenAPI specification file to the deployment process by including `docs/openapi.yaml` in the SCP transfer step alongside the backend binary and environment configuration.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           port: ${{ secrets.VPS_PORT || 22 }}
-          source: "sigap-backend,backend.env"
+          source: "sigap-backend,backend.env,docs/openapi.yaml"
           target: "${{ secrets.VPS_DEPLOY_PATH }}"
 
       - name: Restart SIGAP backend service
